# TBmodels

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  .style.yapf  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  clean  clean.sh  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py
.cache/d/test_arithmetic/: test_add[False-t21-t11]  test_add[False-t21-t15]eigenval  test_add[False-t22-t12]eigenval  test_add[False-t22-t13]  test_add[False-t23-t13]  test_add[False-t23-t13]eigenval  test_add[False-t24-t13]  test_add[False-t25-t13]  test_add[True-t20-t14]  test_add[True-t21-t15]  test_add[True-t22-t13]eigenval  test_add[True-t22-t15]eigenval  test_add[True-t23-t12]  test_add[True-t23-t15]  (+79 more)
.ci/: install_script.sh  test_script.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
.github/workflows_source/: ci.yml
.travis-data/: install_script.sh  test_script.sh
doc/: Makefile  replace_colors.py
doc/source/: builder.rst  conf.py  documentation.rst  example_tb.rst  helpers.rst  index.rst  model.rst  reference.rst  simple_model.py  symmetrize.rst  tbmodels.rst  tutorial.rst  whatsnew.rst
examples/cmdline_parser/: parse_model.py
examples/kdotp/: run.py
examples/kwant_interface/: kwant_interface_demo.ipynb
examples/silicon/: .gitignore  read_tb.py  run.py
examples/symmetrization/: .gitignore  requirements.txt  symmetrize.py
playground/: .gitignore
playground/to_kwant/: kwant_test.ipynb  kwant_test_v2.ipynb  test_sublattice_mapping.py  to_kwant_test.ipynb
speed_test/: test.py
src/tbmodels/: __init__.py  _check_compatibility.py  _cli.py  _tb_model.py  helpers.py  io.py  kdotp.py
tbmodels/: __init__.py  _builder.py  _check_compatibility.py  _cli.py  _exceptions.py  _hop_list_model.py  _hoppings_list_model.py  _hr_model.py  _kdotp.py  _legacy_decode.py  _old_model.py  _sparse_matrix.py  _tb_model.py  _types.py  _version.py  exceptions.py  helpers.py  io.py  kdotp.py  read_model.py
tbmodels/_ptools/: __init__.py  sparse_matrix.py
tbmodels/ptools/: locker.py  sparse_matrix.py
tests/: .coveragerc  arithmetic.py  change_uc.py  common.py  conftest.py  coverage.sh  coverage_append.sh  create_tests.py  em_field.py  hr_consistency.py  hr_hamilton.py  hr_print.py  models.py  parameters.py  repr.py  requirements_test.txt  str.py  strip.py  supercell.py  test.py  test_arithmetic.py  test_arithmetic_invalid.py  test_change_unit_cell.py  test_cli_bands.py  test_cli_eigenvals.py  test_cli_parse.py  test_cli_slice.py  test_cli_symmetrize.py  test_constructors.py  test_convention.py  test_doc.py  test_eigenval.py  test_equivalent_operations.py  test_folding.py  test_hamilton.py  test_hdf5.py  test_hr.py  test_hr_print.py  test_join_models.py  test_json.py  (+18 more)
tests/samples/: InAs_nosym.hdf5  InAs_positions_wrong.hdf5  InAs_supercell_reference.hdf5  InAs_sym_reference.hdf5  InAs_symmetries.hdf5  bi.win  bi_centres.xyz  bi_equivalent.win  invalid_file_structure.hdf5  legacy_general_object.hdf5  silicon.win
tests/templates/: arithmetic.py  change_uc.py  em_field.py  hr_hamilton.py  hr_print.py  repr.py  str.py  strip.py  supercell.py  trs.py  uc_mapping.py
tests_new/: conftest.py  models.py  parameters.py  test_arithmetic.py  test_hr.py  test_hr_print.py  test_trs.py  test_uc_change.py
(+2088 files in other folders)
