[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tbmodels"
version = "1.4.4"
description = "A tool for reading, creating and modifying tight-binding models."
authors = ["Dominik Gresch <mail@greschd.ch>"]
license = "Apache 2.0"
readme = "README.md"
documentation = "https://tbmodels.greschd.ch"
repository = "https://github.com/Z2PackDev/TBmodels"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "tight-binding",
    "condensed matter",
    "solid-state",
    "physics",
    "materials science",
]
packages = [
    { include = "tbmodels", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.20"
scipy = "^1.7"
h5py = "^3.2"
symmetry-representation = ">=0.2,<1"
click = "^8.1"
bands-inspect = "^0.3"
"fsc.hdf5-io" = "^1.0.3"
kwant = { version= "^1.3", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
pytest-cov = "^3.0"
pythtb = "^1.7"
sphinx = "^5.0"
sphinx-rtd-theme = "^1.0"
ipython = ">=7.10"
sphinx-click = "4.3"
black = "^22.0"
pre-commit = "^2.20"
pylint = "^2.15"
isort = "^5.10"
mypy = "^0.971"
"ruamel.yaml" = "^0.17.21"
typing-extensions = "^4.3"

[tool.poetry.extras]
kwant = ["kwant"]

[tool.poetry.scripts]
tbmodels = 'tbmodels._cli:cli'

[tool.poetry.plugins."fsc.hdf5_io.load"]
tbmodels = "tbmodels"
