[metadata]
name = tbmodels
author = Dominik Gresch
author_email = greschd@gmx.ch
version = attr: tbmodels._version.__version__
url = https://tbmodels.greschd.ch
description = A tool for reading, creating and modifying tight-binding models.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    tight-binding
    condensed matter
    solid-state
    physics
    materials science
license = Apache 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6
setup_requires =
    fastentrypoints
install_requires =
    numpy
    scipy>=0.15
    h5py
    fsc.export
    symmetry-representation>=0.2
    click>=7.0, !=7.1.0
    bands-inspect
    fsc.hdf5-io>=0.6.0
packages = find:

[options.extras_require]
kwant =
    kwant
dev =
    kwant
    pytest
    pytest-cov
    pythtb
    sphinx
    sphinx-rtd-theme
    ipython>=7.10
    sphinx-click
    black==19.10b0
    pre-commit
    pylint==2.5.0
    mypy==0.770

[options.entry_points]
console_scripts =
    tbmodels = tbmodels._cli:cli
fsc.hdf5_io.load =
    tbmodels = tbmodels

[options.package_data]
tbmodels = py.typed
